--- a/services.html
+++ b/services.html
@@ -28,11 +28,11 @@
 
                 <ul>
 
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/index.html">Home</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/intro.html">Intro</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/services.html">Services</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/blog.html">Projects</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/contact.html">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/intro.html">Intro</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/blog.html">Projects</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
 
 
                 </ul>
@@ -45,8 +45,8 @@
         
         <div class="main">
             <div class="hamburger">
-                <img src="/Users/www.abcom.in/Desktop/portfolio/ham.png" alt="" class="ham" width="23">
-                <img src="/Users/www.abcom.in/Desktop/portfolio/cross.png" alt="" class="cross" width="23">
+                <img src="/ham.png" alt="" class="ham" width="23">
+                <img src="/cross.png" alt="" class="cross" width="23">
             </div>
             <div class="services">
                
