--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
             <nav>
 
                 <ul>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/index.html">Home</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/intro.html">Intro</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/services.html">Services</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/blog.html">Projects</a></li>
-                    <li><a href="/Users/www.abcom.in/Desktop/portfolio/contact.html">Contact</a></li>
+                    <li><a href="/sachar-gaurav.github.io/index.html">Home</a></li>
+                    <li><a href="/sachar-gaurav.github.io/intro.html">Intro</a></li>
+                    <li><a href="/sachar-gaurav.github.io/services.html">Services</a></li>
+                    <li><a href="/sachar-gaurav.github.io/blog.html">Projects</a></li>
+                    <li><a href="/sachar-gaurav.github.io/contact.html">Contact</a></li>
 
                 </ul>
 
@@ -42,8 +42,8 @@
         
         <div class="main">
             <div class="hamburger">
-                <img src="/Users/www.abcom.in/Desktop/portfolio/ham.png" alt="" class="ham" width="23">
-                <img src="/Users/www.abcom.in/Desktop/portfolio/cross.png" alt="" class="cross" width="23">
+                <img src="/sachar-gaurav.github.io/ham.png" alt="" class="ham" width="23">
+                <img src="/sachar-gaurav.github.io/cross.png" alt="" class="cross" width="23">
             </div>
             <div class="contactform">
                 <h2 class="gg">Fill your details below for contact</h2>
