--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
                 <ul>
 
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/intro.html">Intro</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/blog.html">Projects</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/sachar-gaurav.github.io/index.html">Home</a></li>
+                    <li><a href="/sachar-gaurav.github.io/intro.html">Intro</a></li>
+                    <li><a href="/sachar-gaurav.github.io/services.html">Services</a></li>
+                    <li><a href="/sachar-gaurav.github.io/blog.html">Projects</a></li>
+                    <li><a href="/sachar-gaurav.github.io/contact.html">Contact</a></li>
 
                 </ul>
 
@@ -47,8 +47,8 @@
         
         <div class="main">
             <div class="hamburger">
-                <img src="/ham.png" alt="" class="ham" width="23">
-                <img src="/cross.png" alt="" class="cross" width="23">
+                <img src="/sachar-gaurav.github.io/ham.png" alt="" class="ham" width="23">
+                <img src="/sachar-gaurav.github.io/cross.png" alt="" class="cross" width="23">
             </div>
             <div class="infocontainer">
                 <div class="devinfo">
@@ -57,11 +57,11 @@
                     <div class="about">Wanna be developer</div>
 
                     <div class="buttons">
-                        <a href="/Users/www.abcom.in/Desktop/portfolio/Gaurav_Sachar_CV_S.pdf" target="_blank">
+                        <a href="/sachar-gaurav.github.io/Gaurav_Sachar_CV_S.pdf" target="_blank">
                             <button>Downlaod CV</button>
                         </a>
                         
-                        <a href="/Users/www.abcom.in/Desktop/portfolio/contact.html">
+                        <a href="/sachar-gaurav.github.io/contact.html">
                             <button>Contact Details</button>
                         </a>
 
