--- a/intro.html
+++ b/intro.html
@@ -28,11 +28,11 @@
 
                 <ul>
 
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/intro.html">Intro</a></li>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/blog.html">Projects</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/sachar-gaurav.github.io/index.html">Home</a></li>
+                    <li><a href="/sachar-gaurav.github.io/intro.html">Intro</a></li>
+                    <li><a href="/sachar-gaurav.github.io/services.html">Services</a></li>
+                    <li><a href="/sachar-gaurav.github.io/blog.html">Projects</a></li>
+                    <li><a href="/sachar-gaurav.github.io/contact.html">Contact</a></li>
 
                 </ul>
 
@@ -45,15 +45,15 @@
         <div class="main">
 
             <div class="hamburger">
-                <img src="/ham.png" alt="" class="ham" width="23">
-                <img src="/cross.png" alt="" class="cross" width="23">
+                <img src="/sachar-gaurav.github.io/ham.png" alt="" class="ham" width="23">
+                <img src="/sachar-gaurav.github.io/cross.png" alt="" class="cross" width="23">
             </div>
             <div class="intro">
 
 
                 <h2 style="text-align:center">About Section</h2>
                 <div class="card1">
-                    <img src="/self.jfif" alt="John" style="width:100%">
+                    <img src="/sachar-gaurav.github.io/self.jfif" alt="gaurav" style="width:100%">
                     <h1>Gaurav Sachar</h1>
                     <p class="title">BSc. Mathematical Sciences</p>
                     <p>University of Delhi</p>
