--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,10 @@
                       <input type="checkbox" class="form-check-input" id="exampleCheck1">
                       <label class="form-check-label" for="exampleCheck1">We will work on a project</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                     <a href="/sachar-gaurav.github.io/submit.html">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </a>
+                    
                   </form>
                 
 
