--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
             </div>
             <div class="contactform">
                 <h2 class="gg">Fill your details below for contact</h2>
-                <form action="mailto:sachargaurav123.ils@gmail.com">
+                <form action="http://formspree.io/sachargaurav123.ils@gmail.com" method="post">
                     <div class="mb-3">
                       <label for="clientname" class="form-label">Name</label>
                       <input type="text" class="form-control" id="clientname" aria-describedby="nameHelp">
